--- a/html/Inspection/Insp_EMPENNAGE.html
+++ b/html/Inspection/Insp_EMPENNAGE.html
@@ -84,4 +84,9 @@
     <td class="cellInspectionInterval">(5000)</td>
     <td class="cellInspectionText">For planes s/n 802A-0189 and subs, and those modified IAW SL#129A, replace eyebolts in stabilizer at strut fittings per S/L #129.</td>
   </tr>
+  <tr>
+    <td class="cellInspectionNumber">E18</td>
+    <td class="cellInspectionInterval">(100/12 Months)</td>
+    <td class="cellInspectionText">Check the upper rudder hinge and surrounding structure for movement of the upper hinge relative to the rudder,  sheared rivets or cracks in the skins, spars, hinge brackets or doublers per Service Letter #247 and Service Letter #331.</td>
+  </tr>
 </table>
