--- a/html/Inspection/Insp_ENGINE AND MOUNT.html
+++ b/html/Inspection/Insp_ENGINE AND MOUNT.html
@@ -104,4 +104,14 @@
     <td class="cellInspectionText">Conduct all other inspections according to “Pratt and Whitney Engine Maintenance
       Manual" at the recommended interval.</td>
   </tr>
+  <tr>
+    <td class="cellInspectionNumber">EM17</td>
+    <td class="cellInspectionInterval">(300)</td>
+    <td class="cellInspectionText">Examine engine mount for cracks and corrosion per Service Letters #253, #299 and #335 and check torque at firewall connections.  Torque is 4000 in-lbs on head of upper bolts and 1100-1300 in-lbs on nuts of lower bolts. Reinstall safety wire and cotter pins.</td>
+  </tr>
+  <tr>
+    <td class="cellInspectionNumber">EM18</td>
+    <td class="cellInspectionInterval">(100)</td>
+    <td class="cellInspectionText">Verify that the routing of the flexible Py line does not allow rubbing or chafing on any rotating component or other structure (serial numbers -0001 thru -0555 and -4001 thru -4025).</td>
+  </tr>
 </table>
