--- a/html/Inspection/Insp_FLAPS.html
+++ b/html/Inspection/Insp_FLAPS.html
@@ -32,5 +32,9 @@
     <td class="cellInspectionNumber">F8</td>
     <td class="cellInspectionInterval">(12 Months)</td>
     <td class="cellInspectionText">Inspect flap actuator and mount for security, cracks, and for proper operation.  If you have p/n 71112-1 actuator, also inspect for fluid leaks and worn motor brushes.</td>
+  </tr><tr>
+    <td class="cellInspectionNumber">F9</td>
+    <td class="cellInspectionInterval">(100)</td>
+    <td class="cellInspectionText">Inspect for flap actuator gear shaft axial play (if equipped with C100168-4 flap actuator).<td>
   </tr>
 </table>
