--- a/html/Maintenance/Altimeter - Static System.html
+++ b/html/Maintenance/Altimeter - Static System.html
@@ -7,3 +7,7 @@
      The probe on the AT-802-2 will require and adapter to connect vacuum port. To maintain compliance with part 91.411, use Appendix
      E to part 43 outlines the procedures for performing the altimeter systems test and inspection for the transponder. </p>
 </div>
+
+<p>Certain United Instruments, Inc. 5934 Series Altimeters and 7(1)00 Series (I)VSI instruments have been identified by the manufacturer as having nonconforming dials. These instruments were manufactured between June 2012 and June 2013. The issue, as described in United Instruments Service Note No. 5, is paint displacement around the two screws on the instrument dial. Refer Service Letter #324 for further information.</p>
+
+<p>5934 Series altimeters that were manufactured between January 2015 and February 2016 by United Instruments, Inc. may be susceptible to developing a slow diaphragm leak which would affect the accuracy of the altimeters. Refer to Service Letter #344 to see if your aircraft is affected.</p>
