--- a/html/Maintenance/Canopy Doors.html
+++ b/html/Maintenance/Canopy Doors.html
@@ -6,6 +6,10 @@
 
 <p>All AT-802s have emergency door releases on the left-hand door. These doors can be removed by supporting the open door and removing the spring-pins. </p>
 
+<p>Prior to 2014, the emergency handle door stop was manufactured with sharp lower corners prone to catch on a ring, etc. If you have such a stop, you may modify it. Inspect the lower two corners of the stop for sharp corners. If the corners have not been radiused, remove the stop by drilling out the 2 rivets holding it to the door frame. Radius the two lower corners of the stop to 1 /8" radius, touch up the paint, and reinstall the stop with MS20600AD4 rivets.</p>
+
+<p>There has also been at least one instance where the door release spring has worn through its attach hole in the 11875-1 bracket. The material for the bracket has been changed from 2024-T3 aluminum to 4130N steel in late 2013 to increase its strength and durability. The bracket has also been lengthened to provide additional edge distance around the spring attach hole. Refer to Service Letter #316 for directions to install this improvement.</p>
+
 <p>The right-hand canopy door may be removed by following these steps: </p>
 
 <ol type="1">
@@ -14,6 +18,12 @@
     <li>Open the door and support it while removing the AN3 hinge bolts. </li>
     <li>Remove the door from the airplane.</li>
 </ol>
+
+<p>An alternate handle is installed at the factory in conjunction with radio equipment which could otherwise cause an interference problem with operation of the standard handle as it rotates forward toward the stop. This alternate handle has a separate latch arm and slimmer profile to accommodate radio installations installed in the forward corners of the cockpit.</p>
+
+<p>This alternate handle is available to facilitate radio installations made in the field as well. Be aware of the requirement to be able to use the cockpit door to be able to use the cockpit door emergency release handle and inspect any installations made to ensure the handle can operate through its full range of motion.</p>
+
+<p>Refer to Service Letter #323 for more information on the installation of the alternate handle.</p>
 
 <p>Cable ties or any tying method should never be used to secure a cockpit door closed in flight. Tying door handles closed will add steps to normal operation of the door handle and may hinder the operation of the emergency door release which would be a safety issue during an emergency. Modifications to the door latch system should be removed.</p>
 
