--- a/html/Maintenance/Engine Instruments.html
+++ b/html/Maintenance/Engine Instruments.html
@@ -2,6 +2,12 @@
 
 <p>The Fuel Filter Pressure Light, Low Oil Pressure Light, Oil Temperature Indicator, Air Filter Pressure Light, Chip Light, and Hour Meter are all powered by the airplane's electrical system.</p>
 
+<p>Beginning in the second half of 2014, Air Tractor began installation of a differential pressure torquemeter. The previous torquemeters ran off of a single oil pressure line from the torque pressure port “AD” on the engine propeller reduction gearbox (RGB). This port provided pressure from the torque piston within the RGB. The single port torquemeter displayed the engine torque corresponding to the difference between the torque piston pressure and atmospheric pressure.</p>
+
+<p>The differential pressure/dual port torquemeters reference an additional oil pressure line from the RGB, port “AC” instead of atmospheric pressure. This pressure is the internal pressure of the gearbox. The torquemeter indicates the difference in pressures from the high pressure port “AD” and the low pressure port “AC” for increased indication accuracy.</p>
+
+<p>Refer to Service Letter #328 for additional information.</p>
+
 <p>There have been a few reports of the face of the torque indicator filling with engine oil on turbine powered aircraft incorporating a “dual wet line” torque indicating system.</p>
 
 <p>When the dual line torque indicating system was incorporated in 2012, an additional line was routed from the low torque pressure port on the engine reduction gear box to a dual port torque indicator. This configuration allows for the reduction gear box internal static pressure to be provided as a reference at the indicator, providing a more accurate torque reading.</p>
