--- a/html/Maintenance/Suggested Time Limits.html
+++ b/html/Maintenance/Suggested Time Limits.html
@@ -32,6 +32,12 @@
         <td class="plainTableNormalCell">5 Years</td>
         <td class="plainTableNormalCell"></td>
     </tr>
+    <tr>
+        <td class="plainTableNormalCell">NAS1304-30</td>
+        <td class="plainTableNormalCell">Bolt for grab handle above windshield</td>
+        <td class="plainTableNormalCell">5 years or 1000 flight hours</td>
+        <td class="plainTableNormalCell"></td>
+    </tr>
 </table>
 
 <p>Recommended replacement intervals are provided for the following components but Air Tractor suggests they be replaced at more frequent intervals if the airplane is operated in a more severe manner such as for rice operations. </p>
