--- a/html/Maintenance/Air Filters.html
+++ b/html/Maintenance/Air Filters.html
@@ -6,6 +6,8 @@
 
 <p>For aircraft with the Brackett BA-413E foam Ram Air filter, removal of the filter element is accomplished by removing the lower and side engine cowls and the lower engine plenum cover.  Remove the center filter support rods by removing the screw on the forward end and sliding them out of their retaining brackets at the aft end.  Remove the old filter element and replace with a new one, ensuring that the filter element completely fills the stainless steel frame, especially in the corners.  Replace the filter support rods, plenum cover, and cowl skins in reverse order of removal.  This filter should not be cleaned, as this may remove the wettant and decrease the filtering ability of the foam.  Any excess dirt or debris that has accumulated on the forward face of the filter may be brushed off with a bristle brush, like a paintbrush, and vacuumed out of the plenum.  The Brackett air filter has a maximum recommended service life of 12 calendar months, regardless of the actual flight time.  The reason is to ensure that acceptable levels of wettant remain in the filter to adequately capture dust and debris. </p>
 
+<p>Operators wishing to retrofit the Donaldson P609713 pleated filter element to an aircraft that is currently equipped with the Brackett BA-413E foam filter element should refer to Service Letter #348 for further instructions.</p>
+
 <p>The best way to protect your engine is to avoid contaminated air. This will also improve the life of air filters. To do this, the following steps can be taken:</p>
 <p>-Use ground idle during ground operation to reduce hte amount of dust stirred up by the propeller.</p>
 <p>When loading multiple airplanes, avoid positioning the airplanes in a way such that one airplane will blow contaminants toward the other. </p>
@@ -21,3 +23,7 @@
     <p class="boxCautionSmallHeader">Note</p>
     <p class="boxCautionSmallText">Frequently inspect the compressor and turbine discs with a borescope to find early erosion or corrosion. This will help minimize TBOs</p>
 </div>
+
+<p>The turbine powered Air Tractor models are equipped with a Differential Pressure switch (also known as a “Delta-P Switch”) that monitors the pressure drop across the engine air filter. This switch is mounted on the upper aft side of the engine plenum. This pressure switch is made by Dwyer and has a stamped sheet metal cover that is held in place by a single #6 machine screw threaded into the switch housing. There have been instances where this screw became loose because of stripped threads in the switch housing due to over-tightening. </p>
+
+<p>Air Tractor recommends that the switch cover be safety wired with MS20995C25 stainless steel safety wire. as directed in Service Letter #321.</p>
