--- a/html/Maintenance/Hopper Tanks.html
+++ b/html/Maintenance/Hopper Tanks.html
@@ -24,3 +24,7 @@
 </figure>
 
 <p>Replacement of the hopper is done by reversing the order of the above procedure. Clean all sealing surfaces and apply new sealant and gaskets. </p>
+
+<p>The hoppers for the above Air Tractor models have painted-on hopper quantity markings on the outside of the hopper and the hopper wall inside the cockpit. These markings are intended to be a backup to the panel mounted hopper quantity gauge as well as a handy reference when the master switch is turned off.</p>
+
+<p>If faded or incorrect markings are found, Air Tractor can supply the proper templates and marking materials to reapply the markings on the internal or external surfaces of the hopper. Service Letter #325 can provide additional information regarding the placement of the markings.</p>
