--- a/html/Inspection/Insp_AIR CONDITIONING SYSTEM.html
+++ b/html/Inspection/Insp_AIR CONDITIONING SYSTEM.html
@@ -19,4 +19,9 @@
     <td class="cellInspectionInterval">(12 Months)</td>
     <td class="cellInspectionText">Inspect general condition of system and check freon charge.</td>
   </tr>
+  <tr>
+    <td class="cellInspectionNumber">AC5</td>
+    <td class="cellInspectionInterval">(100)</td>
+    <td class="cellInspectionText">Inspect the rear air conditioner duct to ensure that it is properly installed, secured and cannot rotate in such a way to obstruct rudder travel (2-seat aircraft only).</td>
+  </tr>
 </table>
