--- a/html/Inspection/Insp_CONTROL SYSTEM.html
+++ b/html/Inspection/Insp_CONTROL SYSTEM.html
@@ -94,4 +94,14 @@
     <td class="cellInspectionInterval">(12 Months)</td>
     <td class="cellInspectionText">Check elevator controls friction device for proper adjustment as described in “Elevator Controls" under HORIZONTAL STABILIZERS AND ELEVATORS in the Maintenance Section of this manual.  Check the diameter of the friction device wear ring on the elevator control idler.  The minimum diameter is 1.0 inch.  Replace the idler if wear is excessive.  (Aircraft s/n 802-0376/-4004 and subs and aircraft modified in accordance with Service Information Letter #802-0090 do not have the Friction Damper installed and this inspection does not apply).</td>
   </tr>
+  <tr>
+    <td class="cellInspectionNumber">CS20</td>
+    <td class="cellInspectionInterval">(100)</td>
+    <td class="cellInspectionText">Perform rudder control system inspection per Service Letter #77 and Service Letter #317.</td>
+  </tr>
+  <tr>
+    <td class="cellInspectionNumber">CS21</td>
+    <td class="cellInspectionInterval">(100)</td>
+    <td class="cellInspectionText"> Inspect upper and lower aileron torque tubes for cracks, proper attachment, lubrication and bearing condition.</td>
+  </tr>
 </table>
