--- a/html/Maintenance/Air Filters.html
+++ b/html/Maintenance/Air Filters.html
@@ -8,6 +8,8 @@
 
 <p>Operators wishing to retrofit the Donaldson P609713 pleated filter element to an aircraft that is currently equipped with the Brackett BA-413E foam filter element should refer to Service Letter #348 for further instructions.</p>
 
+<p>If desired, operators which currently operate their aircraft with the Donaldson P609713 filter may use the data in Service Letter #289 to modify the air system to allow installation of a Brackett Aircraft BA-413E air filter.</p>
+
 <p>The best way to protect your engine is to avoid contaminated air. This will also improve the life of air filters. To do this, the following steps can be taken:</p>
 <p>-Use ground idle during ground operation to reduce hte amount of dust stirred up by the propeller.</p>
 <p>When loading multiple airplanes, avoid positioning the airplanes in a way such that one airplane will blow contaminants toward the other. </p>
