--- a/html/Maintenance/Elevator Trim Tab Controls.html
+++ b/html/Maintenance/Elevator Trim Tab Controls.html
@@ -14,6 +14,9 @@
     <figcaption class="centerText">Idler</figcaption>
 </figure>
 
+<p>Service Letter #300 describes that 
+    a fatigue crack in the weld on P/N: 70857-1 elevator trim actuator attach clamp assembly was found, most likely caused by elevator trim system binding due to lack of lubrication of the elevator trim / boost tab bushings. An improved attach clamp has been incorporated into the assembly line starting with serial number -0417 and is available for retrofit in earlier aircraft.</p>
+
 <p>The bellcrank has output arms on both the right and left ends. Each of these ends connects to an idler in each of the horizontal stabilizers. Motion is then transmitted via dual control pushrods to the control horns of the elevator tabs on both sides of the airplane.  The worm-and-sector arrangement allows the selected position of the tab to be maintained by sliding-face friction between the worm gear and the gear sector. If the trim tabs creep in flight, rework the friction bellville washers as detailed in SIL 802-0043. </p>
 
 <p>A p/n 70742-1 trim bellcrank is attached to the fuselage frame with AN3-14A bolts, Bunting P26-8 bushings, p/n 70065-1 spacer bushings, AN365-1032 nuts, and AN960-10 washers under the nuts. The bellcrank should be removed during 12-month inspections and the bushings inspected for wear and lubricated. </p>
