--- a/html/Maintenance/Suggested Time Limits.html
+++ b/html/Maintenance/Suggested Time Limits.html
@@ -33,6 +33,12 @@
         <td class="plainTableNormalCell"></td>
     </tr>
     <tr>
+        <td class="plainTableNormalCell">20118-1</td>
+        <td class="plainTableNormalCell">Tie down ring</td>
+        <td class="plainTableNormalCell">5 years</td>
+        <td class="plainTableNormalCell"></td>
+    </tr>
+    <tr>
         <td class="plainTableNormalCell">NAS1304-30</td>
         <td class="plainTableNormalCell">Bolt for grab handle above windshield</td>
         <td class="plainTableNormalCell">5 years or 1000 flight hours</td>
