--- a/html/Inspection/Insp_OIL SYSTEM.html
+++ b/html/Inspection/Insp_OIL SYSTEM.html
@@ -39,4 +39,9 @@
     <td class="cellInspectionInterval">(---)</td>
     <td class="cellInspectionText">Make all other oil system checks as called out in the Engine Maintenance Manual.</td>
   </tr>
+  <tr>
+    <td class="cellInspectionNumber">OS9</td>
+    <td class="cellInspectionInterval">(100)</td>
+    <td class="cellInspectionText">Inspect for accessory drive drain line oil leaks per Pratt and Whitney Service Bulletins A14458 and 14468 (-67F prior to serial number RZ0090, excluding RZ0079).</td>
+  </tr>
 </table>
