--- a/html/Maintenance/ELECTRICAL SYSTEM - General.html
+++ b/html/Maintenance/ELECTRICAL SYSTEM - General.html
@@ -1,3 +1,4 @@
+<p>All aircraft with Goodrich starter generators installed should refer to Service Letter #312. Goodrich Corporation requires this check and possible repair be accomplished during the next scheduled removal or repair.</p>
 
 <p>Each of the separate electrical circuits discussed in this section is accompanied by its particular wiring schematic drawing shown as a figure in Section 7. The associated Air Tractor part number of a component is the drawing number plus -1 or -2 for left-hand and right-hand parts, respectively. In the event that the part is symmetrical, without a hand designation, the suffix number is -1. </p>
 
