--- a/html/Maintenance/Fuel System Screens and Filters.html
+++ b/html/Maintenance/Fuel System Screens and Filters.html
@@ -31,3 +31,5 @@
     <li>While the fuel pump is running, and after it is turned off, look carefully for fuel leaks. Pay special attention to the area on top of the canister adjacent to the through bolt head and copper washer and to the area around the rubber sealing washer. Other areas to check are the plug in the head of the through bolt and the plug or quick drain valve in the bottom of the canister.</li>
     <li>If fuel leaks are found double check the torque on the through bolt. If this does not resolve the leak the sealing washer should be replaced again.</li>
 </ol>
+
+<p>Aircraft with serial numbers prior to 802-0715 and 802-4001 thru 802-4031 and that are equipped with a P/N 53114-1 fuel filter may have the lower cowling skin come in contact with the existing drain valve on the filter. This contact may be enough to push the valve tang up and open the valve. In turn, this action may result in a temporary drop in fuel pressure. Refer to Service Letter #314 for a remedy to this possibility.</p>
