--- a/html/Inspection/Insp_FUEL SYSTEM.html
+++ b/html/Inspection/Insp_FUEL SYSTEM.html
@@ -60,4 +60,9 @@
     <td class="cellInspectionText">Clean fuel nozzles, check flow and pattern per “Pratt and Whitney Engine Maintenance
       Manual” at the recommended interval.</td>
   </tr>
+  <tr>
+    <td class="cellInspectionNumber">FS13</td>
+    <td class="cellInspectionInterval">(100)</td>
+    <td class="cellInspectionText">Inspect Falls Filtration Technologies p/n 03W2536-231 filter cartridge per Service Letter #286 (if equipped).</td>
+  </tr>
 </table>
