--- a/html/Inspection/Insp_GENERAL.html
+++ b/html/Inspection/Insp_GENERAL.html
@@ -23,4 +23,11 @@
             per <xref sectionTarget="2.105.5" prependLabel="Section"></xref>.  (Ref. SL299) 
         </td>
     </tr>
+    <tr>
+        <td class="cellInspectionNumber">G4</td>
+        <td class="cellInspectionInterval">100/(12 Months)</td>
+        <td class="cellInspectionText">
+            Inspect hoses and lines for excessive stiffness, brittleness, chafing or cracks.
+        </td>
+    </tr>
 </table>
