--- a/html/Inspection/Insp_WINGS.html
+++ b/html/Inspection/Insp_WINGS.html
@@ -34,4 +34,17 @@
     <td class="cellInspectionText">Loosen (one at a time) the four AN6 bolts through the wing attach angles and rotate ¼
       turn to insure that they are not frozen. (See Section 2 – WING ATTACHMENT TO FUSELAGE).</td>
   </tr>
+
+  <tr>
+    <td class="cellInspectionNumber">W7</td>
+    <td class="cellInspectionInterval">(600-2200)</td>
+    <td class="cellInspectionText">Perform eddy current inspection on spar caps, spar splice blocks and spar splice plate per Service Letter #284, if aircraft is not equipped with 80540 computerized firegate. (Serial numbers -0001 thru -0178). Operators should also perform the inspection described in Service Letter #215 (serial numbers -0001 thru -0101) unless already accomplished previously.</td>
+  </tr>
+
+  <tr>
+    <td class="cellInspectionNumber">W8</td>
+    <td class="cellInspectionInterval">(12 Months)</td>
+    <td class="cellInspectionText">Inspect wing leading edge ribs for cracks.</td>
+  </tr>
+
 </table>
