--- a/html/Maintenance/Horizontal Stabilizers.html
+++ b/html/Maintenance/Horizontal Stabilizers.html
@@ -13,6 +13,7 @@
     <figcaption class="centerText">Horizontal Stabilizer</figcaption>
 </figure>
 
+<p>For serial numbers -0284 thru -0319, there have been two reports that the elevator center bearing support broke off of the bracket assembly. If your aircraft has not already installed an improved version, refer to Service Letter #285 for further information.</p>
 
 <p>
     The stabilizer is sealed on the ends with PR-1422 A2 to prevent chemical entry.
