--- a/html/Inspection/Insp_DISPERSAL EQUIPMENT.html
+++ b/html/Inspection/Insp_DISPERSAL EQUIPMENT.html
@@ -99,4 +99,9 @@
     <td class="cellInspectionInterval">(12 Months)</td>
     <td class="cellInspectionText">Inspect for leaks in boom pressure line.</td>
   </tr>
+  <tr>
+    <td class="cellInspectionNumber">DE22</td>
+    <td class="cellInspectionInterval">(100)</td>
+    <td class="cellInspectionText"> Inspect hopper rinse tank shelf attach angles (S/N -0001 through -0219) per Service Letter #248.</td>
+  </tr>
 </table>
