--- a/html/Inspection/Insp_EMPENNAGE.html
+++ b/html/Inspection/Insp_EMPENNAGE.html
@@ -89,4 +89,19 @@
     <td class="cellInspectionInterval">(100/12 Months)</td>
     <td class="cellInspectionText">Check the upper rudder hinge and surrounding structure for movement of the upper hinge relative to the rudder,  sheared rivets or cracks in the skins, spars, hinge brackets or doublers per Service Letter #247 and Service Letter #331.</td>
   </tr>
+  <tr>
+    <td class="cellInspectionNumber">E19</td>
+    <td class="cellInspectionInterval">(100/12 Months)</td>
+    <td class="cellInspectionText">Inspect all tubes and tube clusters in the immediate vicinity of the vertical and horizontal stabilizer, especially the upper diagonal tube (p/n 11029-10) for cracking (float-equipped aircraft prior to serial number -0259). Repairs to the upper diagonal tube can be performed according to data located in Service Letter #266.</td>
+  </tr>
+  <tr>
+    <td class="cellInspectionNumber">E20</td>
+    <td class="cellInspectionInterval">(100)</td>
+    <td class="cellInspectionText">Visual inspection of the horizontal stabilizer auxiliary fin forward attachment (S/N -0001 through -0178) per Service Letter #232.</td>
+  </tr>
+  <tr>
+    <td class="cellInspectionNumber">E21</td>
+    <td class="cellInspectionInterval">(earliest of 1000 hours or 12 months)</td>
+    <td class="cellInspectionText">Visual inspection of the horizontal stabilizer auxiliary fin forward attachment (S/N -0179 and subsequent) per Service Letter #232.</td>
+  </tr>
 </table>
