--- a/html/Inspection/Insp_FLAPS.html
+++ b/html/Inspection/Insp_FLAPS.html
@@ -36,5 +36,9 @@
     <td class="cellInspectionNumber">F9</td>
     <td class="cellInspectionInterval">(100)</td>
     <td class="cellInspectionText">Inspect for flap actuator gear shaft axial play (if equipped with C100168-4 flap actuator).<td>
+  </tr><tr>
+    <td class="cellInspectionNumber">F10</td>
+    <td class="cellInspectionInterval">(400)</td>
+    <td class="cellInspectionText">Inspect condition of rubber flap actuator coupling per Service Letter #260.<td>
   </tr>
 </table>
