--- a/html/Maintenance/Air Filters.html
+++ b/html/Maintenance/Air Filters.html
@@ -26,6 +26,13 @@
     <p class="boxCautionSmallText">Frequently inspect the compressor and turbine discs with a borescope to find early erosion or corrosion. This will help minimize TBOs</p>
 </div>
 
+<p>All  aircraft prior to serial number -0373
+    may need to reroute the nose light wires
+    to reduce the chances of chafing and electrical contact with the engine. The original installation of the nose light wires for ram air equipped airplanes routed these wires near the engine where there
+    is a possibility for chafing and subsequent arcing when the nose lights are powered on.</p>
+    
+    <p>To correctly reroute these wires, or for more information, read Service Letter #287.</p>
+
 <p>The turbine powered Air Tractor models are equipped with a Differential Pressure switch (also known as a “Delta-P Switch”) that monitors the pressure drop across the engine air filter. This switch is mounted on the upper aft side of the engine plenum. This pressure switch is made by Dwyer and has a stamped sheet metal cover that is held in place by a single #6 machine screw threaded into the switch housing. There have been instances where this screw became loose because of stripped threads in the switch housing due to over-tightening. </p>
 
 <p>Air Tractor recommends that the switch cover be safety wired with MS20995C25 stainless steel safety wire. as directed in Service Letter #321.</p>
