--- a/html/Maintenance/Amsafe Airbag System.html
+++ b/html/Maintenance/Amsafe Airbag System.html
@@ -3,3 +3,10 @@
 <p>The maintenance requirements of the system include a 12-month inspection and functional test of the system.  The electronics module must be returned to AmSafe for refurbishment after a period of seven years from month of manufacture and must be taken out of service after a period of 14 years from month of manufacture.  The inflators must be removed and replaced after a period of 10 years from the month of manufacture.</p>
 
 <p>Any time any component of the AmSafe Airbag system is disconnected or removed from the aircraft, the system requires a functional test performed by an AmSafe Authorized Service Center. </p>
+
+<p>The shoulder harness adjusters on the AmSafe Airbag systems may have a tendency to slowly loosen over time (over the course of several hours of flight). This requires the pilot to periodically retighten the shoulder harnesses. As long as the shoulder harnesses are retightened periodically, there is no safety hazard associated with these adjusters.
+</p>
+
+<p>AmSafe has developed a small rubber plug (AmSafe p/n 502913) that, when installed on the adjusters, will prevent this type of loosening. If your aircraft is missing these plugs or never had them, it is recommended that they be installed as described in Service Letter #279.</p>
+
+<p>If your aircraft does not currently have Amsafe airbags and the operator wishes to have them installed, follow the directions located in Service Letter #277.</p>
