--- a/html/Maintenance/Wing Attachment to Fuselage.html
+++ b/html/Maintenance/Wing Attachment to Fuselage.html
@@ -23,6 +23,10 @@
     <figcaption class="centerText">Gap Cover Removal Detail</figcaption>
 </figure>
 
+<p>Any time an Air Tractor plane suffers damage to the leading edge of a wing the associated rear spar attaching structure needs to be carefully inspected for damage. The rear spar connecting bolt should be replaced. The wing rear spar plate connection to the rear spar should also be carefully inspected. Cracks in the paint or the sealer where the plate attaches to the rear spar are indications of possible damage.</p>
+
+<p>If your plane has suffered wing damage from striking an obstacle such as a pole or a wire, or other accident damage, be sure that the wing rear spar attaching structure is inspected carefully for damage. Failure to detect and repair damage to the rear spar attaching structure that could have been caused by other wing damage may result in subsequent wing separation from the plane in flight.</p>
+
 <p>Place a small hydraulic jack under the wing rear spar plate and apply only a small amount of pressure to support the wing when the bolt is removed. Lock the parking brake so the aircraft will not move. Remove the nut and drive the bolt out with a small hammer gently, protecting the threads from damage. Inspect the bolt visually, then place it on a smooth plate and rotate to see if it is bent. Inspect for thread damage or rust. Do not use excessive force to remove the bolts, and do not heat. If there is difficulty in removing the bolts, contact the factory. </p>
 
 <p>We encourage replacement of old bolts with new bolts at all times, but if the old bolts are in good shape and the time intervals mentioned above are not exceeded, they may be re-installed. Be sure to grease the bolts with MIL-G-81322 grease before installing. Torque values are 1100 inch-pounds (Torque wrench on nut). </p>
