--- a/html/Inspection/Insp_DISPERSAL EQUIPMENT.html
+++ b/html/Inspection/Insp_DISPERSAL EQUIPMENT.html
@@ -104,4 +104,9 @@
     <td class="cellInspectionInterval">(100)</td>
     <td class="cellInspectionText"> Inspect hopper rinse tank shelf attach angles (S/N -0001 through -0219) per Service Letter #248.</td>
   </tr>
+  <tr>
+    <td class="cellInspectionNumber">DE23</td>
+    <td class="cellInspectionInterval">(12 Months)</td>
+    <td class="cellInspectionText"> Check the condition and security of the Automatic Flagman dispenser (if equipped) per service letter #211.</td>
+  </tr>
 </table>
