--- a/html/Inspection/Insp_ELECTRICAL SYSTEM.html
+++ b/html/Inspection/Insp_ELECTRICAL SYSTEM.html
@@ -41,7 +41,7 @@
   </tr>
    <tr>
     <td class="cellInspectionNumber">ES9</td>
-    <td class="cellInspectionInterval">(300)</td>
-    <td class="cellInspectionText">Inspect starter-generator brushes per <xref fileTarget="html/Maintenance/Starter Generator Brush Inspection.html" prependLabel="Section"></xref>.</td>
+    <td class="cellInspectionInterval">(200-300)</td>
+    <td class="cellInspectionText">Inspect and clean the starter generator and brushes per Service Letter #212 <xref fileTarget="html/Maintenance/Starter Generator Brush Inspection.html" prependLabel="Section"></xref>.</td>
   </tr>
 </table>
