--- a/html/Maintenance/Engine Starting Procedures.html
+++ b/html/Maintenance/Engine Starting Procedures.html
@@ -5,3 +5,8 @@
 <p>Once the engine is above 56% Ng, release the starter switch. You may leave the ignitor switch in the up position since the ignitors are OFF as soon as the start switch is released. Turn on the generator. Right after a start, especially without a battery cart, your generator will be carrying a heavy load while recharging the batteries, and can drag the engine down. If your Ng speed begins to fall below 58% when you turn on the generator, you should advance the power level as required to maintain a Ng speed above 58%. </p>
 
 <p>Starting an engine that is turning slow with weak batteries is asking for a disaster. During the start process, if anything seems questionable, pull the start lever back to the cut-off position with the starter still engaged and allow the starter to run till the ITT has fallen to safe limits. As stated at the beginning of this section, starting the engine is not hard, but you have to do it right or you will find yourself in a trap. Most over temperature conditions occur as a result of improper starting. Repairs to your engine, caused by an over-temperature condition, can be very expensive! </p>
+
+<p>For serial numbers -0001 thru -0138 -- Air Tractor has received reports from the field of slow starting aircraft. We have determined that fuel can be siphoned out of the fuel pump, filter and fuel control causing the start to be delayed as the fuel is replenished.
+</p>
+
+<p>Air Tractor has a kit to remedy this siphoning effect. If you are having trouble with slow starts you should install the kit listed in Service Letter #221. If your aircraft has not had Service Letter # 193 complied with, it must have it complied with before installing kit #221-602-802.</p>
