--- a/html/Maintenance/Parking Brake.html
+++ b/html/Maintenance/Parking Brake.html
@@ -5,6 +5,31 @@
     <figcaption class="centerText">Parking-Brake Valve</figcaption>
 </figure>
 
+<p>The proper operation of the parking valve is as follows:</p>
+
+<ol type=‘1’>
+    <li>To set the parking brakes:</li>
+    <ul>
+        <li>Apply brakes.</li>
+        <li>Pull on the parking brake handle.</li>
+        <li>Release the brake pedal pressure.</li>
+</ul>
+
+    <li>To release the parking brakes:</li>
+    <ul>
+        <li>Depress brake pedal.</li>
+        <li>The parking brake valve should release when enough brake pedal pressure is applied.</li>
+        <li>If not the valve can be gently pushed in to release the parking brakes.</li>
+        <li>Release brake pedal pressure.</li>
+</ul>
+</ol>
+
+<div class=‘boxCautionLarge’>
+    <p class=‘boxCautionLargeHeader’>CAUTION</p>
+    <p class=‘boxCautionLargeText’>Applying brake pressure, before pushing the parking brake handle in, relieves the force required to unlock the parking valve. Forcing the parking brake valve in will damage the internal parts of the valve and cause the valve to malfunction.</p>
+</div>
+
+
 <p>Leaking of brake fluid from the top of the valve body indicates failure to the O-rings that seals the valve stem.  O-ring replacement may be performed by removing the defective valve body only.  O-ring replacement may be done using the following steps: </p>
 
 <ol type="1">
