--- a/html/Maintenance/Tail Wheel Lock Pin and Housing.html
+++ b/html/Maintenance/Tail Wheel Lock Pin and Housing.html
@@ -253,3 +253,5 @@
     Remove the tail wheel locking mechanism by removing the 4 bolts on the top of the housing, check pin for
     straightness and wear. Lubricate, reinstall. Check alignment and adjustment.
 </p>
+
+<p>For serial numbers -0089 thru -0118 plus those retrofitted with stainless steel tailwheel unlock rods -- there has been a report of the tail wheel unlock rod binding in the fairleads. Inspect the fairleads and insure that the hole through the fairleads is .323" (Letter "P" Drill). Any fairleads with a hole smaller than .323" should be replaced with a 70122-2 fairlead per Service Letter #222.</p>
