--- a/html/Inspection/Insp_FUSELAGE FRAME.html
+++ b/html/Inspection/Insp_FUSELAGE FRAME.html
@@ -1,8 +1,8 @@
 <table class="tableInspections">
     <tr>
     <td class="cellInspectionNumber">FF1</td>
-    <td class="cellInspectionInterval">(300)</td>
-    <td class="cellInspectionText">Check for cracks in upper and lower aft fuselage structure, especially upper aft L/H 	longeron per S/L #195. Check for cracks around tail spring attach area. Check for 	cracks around main gear attach area.</td>
+    <td class="cellInspectionInterval">(100)</td>
+    <td class="cellInspectionText">Check for cracks in upper and lower aft fuselage structure, especially upper aft L/H longeron per S/L #195 and S/L #217A. Check for cracks around tail spring attach area. Check for cracks around main gear attach area.</td>
   </tr>
    <tr>
     <td class="cellInspectionNumber">FF2</td>
