--- a/html/Inspection/Insp_EMPENNAGE.html
+++ b/html/Inspection/Insp_EMPENNAGE.html
@@ -26,8 +26,8 @@
   </tr>
   <tr>
     <td class="cellInspectionNumber">E6</td>
-    <td class="cellInspectionInterval">(100)</td>
-    <td class="cellInspectionText">Check stabilizer attaching pedestal for cracks per S/L #180A. When the replacement pedestal is installed, inspections may be performed on a 12-month basis.</td>
+    <td class="cellInspectionInterval">(100/12 Months)</td>
+    <td class="cellInspectionText">Check stabilizer attaching pedestal for cracks per S/L #180 and S/L #180A. When the replacement pedestal is installed, inspections may be performed on a 12-month basis.</td>
   </tr>
   <tr>
     <td class="cellInspectionNumber">E7</td>
