--- a/html/Inspection/Insp_FUEL SYSTEM.html
+++ b/html/Inspection/Insp_FUEL SYSTEM.html
@@ -65,4 +65,9 @@
     <td class="cellInspectionInterval">(100)</td>
     <td class="cellInspectionText">Inspect Falls Filtration Technologies p/n 03W2536-231 filter cartridge per Service Letter #286 (if equipped).</td>
   </tr>
+  <tr>
+    <td class="cellInspectionNumber">FS14</td>
+    <td class="cellInspectionInterval">(First of 300 or 12 months)</td>
+    <td class="cellInspectionText"> Inspect FCU to fuel nozzle manifold tubing for chafing. (S/N -0001- through -0073).</td>
+  </tr>
 </table>
