--- a/html/Inspection/Insp_PROPELLER.html
+++ b/html/Inspection/Insp_PROPELLER.html
@@ -46,7 +46,7 @@
     <tr>
         <td class="cellInspectionNumber">P9</td>
         <td class="cellInspectionInterval">(12 Months)</td>
-        <td class="cellInspectionText">If equipped with Woodward 8210 Propeller Governor, Inspect and clean beta valve plunger assembly.  (Ref. SL172) 
+        <td class="cellInspectionText">Inspect and clean beta valve plunger assembly. (if equipped with Woodward 8210 propeller governor). (Ref. SL172) 
         </td>
     </tr>
     <tr>
