--- a/html/Inspection/Insp_WINGS.html
+++ b/html/Inspection/Insp_WINGS.html
@@ -47,4 +47,10 @@
     <td class="cellInspectionText">Inspect wing leading edge ribs for cracks.</td>
   </tr>
 
+  <tr>
+    <td class="cellInspectionNumber">W9</td>
+    <td class="cellInspectionInterval">(12 Months)</td>
+    <td class="cellInspectionText"> Remove and inspect the rear spar bolt per instructions in Service Letter #188 (serial numbers -0001 through -0091).</td>
+  </tr>
+
 </table>
