--- a/html/Limitations/AirframeParts.html
+++ b/html/Limitations/AirframeParts.html
@@ -99,8 +99,7 @@
             <p>(2) Or 8,000 landings, whichever comes first.</p>
             <p>(3) If equipped, with AmSafe Airbag System, life is measured from month and year of manufacture
                 of the component in accordance with AmSafe Document E510500.</p>
-            <p>(4) For serial numbers 802/802A-0270 and subsequent. For earlier serial numbers, refer to FAA
-                Airworthiness Directive 2014-16-17.
+            <p>(4) For serial numbers 802/802A-0270 and subsequent. For earlier serial numbers, refer to FAA Airworthiness Directive 2014-16-17 and Air Tractor Service Letter #185, Service Letter #203 and Service Letter #206.
             </p>
         </td>
     </tr>
