--- a/html/Maintenance/Brake Master-Cylinders.html
+++ b/html/Maintenance/Brake Master-Cylinders.html
@@ -7,6 +7,14 @@
 
 <p>The lower end of the master cylinder is attached to a Parker clevis with a Parker check nut. If the rudder pedal position (angle) should need changing for pilot comfort, the check nut can be loosened, and the Clevis immediately below can be rotated with finger pressure in either direction to increase or decrease the angle that the brake pedal makes with the cockpit floor. When desired angle is obtained, snug check nut. To remove the master cylinder, loosen check nut and rotate plunger out of the clevis. Then removing the bolt attaching the master cylinder to the steel plates and disconnect the two brake lines at the cylinder. </p>
 
+<p>There have had reports from two Air Tractor owners that the eyebolt that screws into the brake master cylinder broke in the threads, causing immediate loss of braking on the affected side. This issue could result in losing directional control of the aircraft during taxi, takeoff or landing. This issue affected serial numbers -0001 through -0064.
+</p>
+
+<p>Parker Hannifin Corporation has responded with a modification which should resolve the condition. The modification consists of threading the outside of the piston rod instead of the inside, and providing a clevis with a female thread to attach to the piston rod. This results in a much stronger attachment to the master cylinder.
+</p>
+
+<p>The part number for this upgraded master cylinder is 10-86A. More information can be found in Service Letter #166.</p>
+
 <p>To prevent the brake master cylinder clevis from disengaging from the master cylinder piston rod, it is recommended that the master cylinder piston rod clevis and check nut be inspected to ensure that the rod threads are properly engaged in the clevis internal threads and that the check nut is properly torqued. There is a thread engagement inspection hole in the side of the clevis. Insert piece of safety wire in the hole to determine if the piston rod is screwed into the clevis at least as far as the hole. 
 </p>
 
