--- a/html/Maintenance/Fuel System Screens and Filters.html
+++ b/html/Maintenance/Fuel System Screens and Filters.html
@@ -32,4 +32,9 @@
     <li>If fuel leaks are found double check the torque on the through bolt. If this does not resolve the leak the sealing washer should be replaced again.</li>
 </ol>
 
+<p>Air Tractor has been informed that an aircraft was delivered with the fuel filter inlet and outlet lines reversed. This could have happened on other aircraft during the production sequence.
+</p>
+
+<p>Inspect your aircraft to see if the fuel hose from the fuel selector valve which passes through the firewall is connected to the IN port of the fuel filter. The hose from the OUT port of the fuel filter should route to the engine driven fuel pump. If the fuel lines are properly plumbed as described nothing more is required. Refer to Service Letter #137 and Service Letter #174 for additional information.</p>
+
 <p>Aircraft with serial numbers prior to 802-0715 and 802-4001 thru 802-4031 and that are equipped with a P/N 53114-1 fuel filter may have the lower cowling skin come in contact with the existing drain valve on the filter. This contact may be enough to push the valve tang up and open the valve. In turn, this action may result in a temporary drop in fuel pressure. Refer to Service Letter #314 for a remedy to this possibility.</p>
