--- a/html/Maintenance/Suggested Time Limits.html
+++ b/html/Maintenance/Suggested Time Limits.html
@@ -56,6 +56,12 @@
         <td class="plainTableNormalCell">200-300 hours</td>
         <td class="plainTableNormalCell">Service Letter #212</td>
     </tr>
+    <tr>
+        <td class="plainTableNormalCell">Part number?</td>
+        <td class="plainTableNormalCell">AC drive pad overhaul</td>
+        <td class="plainTableNormalCell">800 hours</td>
+        <td class="plainTableNormalCell">SL 170</td>
+    </tr>
 </table>
 
 <p>Recommended replacement intervals are provided for the following components but Air Tractor suggests they be replaced at more frequent intervals if the airplane is operated in a more severe manner such as for rice operations. </p>
