--- a/html/Maintenance/Tail Wheel Lock Pin and Housing.html
+++ b/html/Maintenance/Tail Wheel Lock Pin and Housing.html
@@ -255,3 +255,7 @@
 </p>
 
 <p>For serial numbers -0089 thru -0118 plus those retrofitted with stainless steel tailwheel unlock rods -- there has been a report of the tail wheel unlock rod binding in the fairleads. Inspect the fairleads and insure that the hole through the fairleads is .323" (Letter "P" Drill). Any fairleads with a hole smaller than .323" should be replaced with a 70122-2 fairlead per Service Letter #222.</p>
+
+<p>From time to time the tail-wheel-lock-pin bushing, located in the tail-wheel-fork-lock-pin-striker plate, becomes worn and needs replacing. The original bushing was a press in type. After pressing the bushing in place, we also staked it at the factory on installation. After receiving reports that the bushing would sometimes become loose and fall out, we began tack welding the bushing in place instead of staking it. </p>
+
+<p>To facilitate field repair of loose, worn, or missing lock pin bushings, Air Tractor has designed a new bolt in bushing. To install the new P/N 40154-1 bushing in your airplane, refer to Service Letter #171.</p>
