--- a/html/Inspection/Insp_AIR CONDITIONING SYSTEM.html
+++ b/html/Inspection/Insp_AIR CONDITIONING SYSTEM.html
@@ -7,7 +7,7 @@
 <tr>
     <td class="cellInspectionNumber">AC2</td>
     <td class="cellInspectionInterval">(300)</td>
-    <td class="cellInspectionText">Inspect drive pad quill shaft and grease quill shaft splines. </td>
+    <td class="cellInspectionText">Inspect drive pad quill shaft and grease quill shaft splines per Service Letter #158 and Service Letter #170. </td>
   </tr>
   <tr>
     <td class="cellInspectionNumber">AC3</td>
