--- a/html/Maintenance/Canopy Doors.html
+++ b/html/Maintenance/Canopy Doors.html
@@ -6,6 +6,13 @@
 
 <p>All AT-802s have emergency door releases on the left-hand door. These doors can be removed by supporting the open door and removing the spring-pins. </p>
 
+<p>Beginning with aircraft manufactured in the year 2000, an improved emergency door release system was introduced on production aircraft and offered for retrofit installation on existing aircraft. This system has rigid links and affords the pilot or rescuer greater mechanical advantage when activating the emergency door release. This system has shown excellent service history since it was first installed, and Air Tractor would like to remind all operators of older aircraft that this system is available for retrofit installation. This system was designed to be easily retrofitted into all Air Tractor models. </p>
+
+<p>We encourage all operators to upgrade their doors with this improved emergency door release system if you haven’t already done so. We recommend installing this system on each cockpit door and we strongly recommend installing this system if your aircraft does not currently have any emergency door release.
+</p>
+
+<p>For specific directions, refer to Service Letter #191.</p>
+
 <p>Prior to 2014, the emergency handle door stop was manufactured with sharp lower corners prone to catch on a ring, etc. If you have such a stop, you may modify it. Inspect the lower two corners of the stop for sharp corners. If the corners have not been radiused, remove the stop by drilling out the 2 rivets holding it to the door frame. Radius the two lower corners of the stop to 1 /8" radius, touch up the paint, and reinstall the stop with MS20600AD4 rivets.</p>
 
 <p>There has also been at least one instance where the door release spring has worn through its attach hole in the 11875-1 bracket. The material for the bracket has been changed from 2024-T3 aluminum to 4130N steel in late 2013 to increase its strength and durability. The bracket has also been lengthened to provide additional edge distance around the spring attach hole. Refer to Service Letter #316 for directions to install this improvement.</p>
