--- a/html/Maintenance/Filling the Hopper Tanks.html
+++ b/html/Maintenance/Filling the Hopper Tanks.html
@@ -4,6 +4,15 @@
 
 <p>After a quick disconnect hose is attached to the filling connection, the filling valve is opened and the solution is pumped into the hopper tanks at a rate up to 500 gallons per minute. The quantity of material in the tanks can be monitored by use of the hopper quantity gauge that is mounted in the side of the fuselage, just above the single point connections. </p>
 
+<p>For models equipped with the 81438 hopper fill vent ball switch, there has been a case where the fill vent shaft coupler allowed the ball switch to become out of rig. This prevented the vent ball from contacting the seat when the hopper was filled, thus allowing chemical to be vented overboard in flight.
+</p>
+
+<p>To help prevent this we have redesigned the shaft coupler. The old style coupler was a section of hose with two screw clamps. This coupler was susceptible to chemical deterioration and would allow the shafts to slip.</p>
+
+<p>The new coupler is a stainless steel collar secured with two 3/32" roll pins. This will insure a secure connection of the two shafts.</p>
+
+<p>Refer to Service Letter #201 for further information.</p>
+
 <p>The hopper tanks are vented to allow the release of air that is displaced during the filling process at a filling rate up to 500 gallons per minute. The hopper vents normally will not accommodate the flow of liquid in the event the tanks are overfilled. An over-fill protection valve has been installed on later models, which allows passage of hopper liquid out through the vent tubes. </p>
 
 <div class="boxCautionLarge">
@@ -12,6 +21,8 @@
 </div>
 
 <p>When the desired hopper tank quantity is reached, the valve is closed and the quick disconnect hose is removed, allowing a quick return of the aircraft to service. </p>
+
+<p>It is recommended that you do not exceed a rate of 400 gallons per minute when filling hoppers of Air Tractors. As the hopper nears full you should slow down the fill rate, by closing down the bottom load valve, to prevent hydraulic lock of the hopper when it is full and the vent check valve closes. The new style hopper vent valve has a rubber seal that the float ball seats against providing near leak proof seal. The float ball valve sits in a cage. High rate filling causes a large quantity of air to exhaust through the vent system. If the rate of air flow is high enough, it is possible that the ball is lifted out of the cage and to the seat. This would close off the vent system and cause the hopper to "pressure up".</p>
 
 <p>Alternatively, the hoppers may be filled using the doors in the tops of the hopper tanks. </p>
 
