--- a/html/Maintenance/Fuel System Drains.html
+++ b/html/Maintenance/Fuel System Drains.html
@@ -14,4 +14,9 @@
 
 <p>The wing tanks have Curtis CCA-1650 drain valves and the header tank and the header tank has a Curtis 39000 drain valve. If the valves leak, remove them and check the seals for nicks and look for trash between the seal and the valve seat. Apply some 3H Permatex or equivalent to the threads of all drains before they are re-installed. If the seal is bad, replace the valve. </p>
 
+<p>Air Tractor has received a report that the retaining ring at the end of the drain stem was cracked. If the retaining ring had cracked on the other side as well, the stem would have fallen out of the valve body, and all of the fuel would have been lost.
+</p>
+
+<p>The cracked retaining ring is probably a result of allowing the stem to snap shut, with the force of the spring hammering shut the O-ring on the seat. It is suggested to ease the valve closed, rather than allowing it to snap shut. Any valve found with a cracked retainer ring must be scrapped.</p>
+
 <p>The header tank drain has a tendency to freeze up during fertilization operations if it is not activated daily. If this should happen, replace it immediately as this is the most important drain in the system. Be careful not to cross-thread drains when replacing. </p>
