--- a/html/Maintenance/Oil Requirements.html
+++ b/html/Maintenance/Oil Requirements.html
@@ -23,3 +23,7 @@
     <p class="boxCautionLargeText">This should not be a cause for concern; once the engine is started and run at idle for several moments, the oil in the AGB will be scavenged back into the oil tank. After the engine is shut down, the oil level should be checked within 10 minutes and the oil level restored to its normal range.</p>
     <p class="boxCautionLargeText">This situation will not have any effect on normal engine operation.</p>
 </div>
+
+<p>Occasionally there is a customer that has problems with elevated oil temperatures. To assist in determining what the cause of the problem is, Air Tractor has developed a thermostat test plug which most of the dealers have. This plug can be installed, in place of the thermostat, to determine whether or not the thermostat and oil cooler thermostat seat are good. </p>
+
+<p>To test the thermostat and seat, follow the procedure described in Service Letter #189.</p>
