--- a/html/Maintenance/Rudder.html
+++ b/html/Maintenance/Rudder.html
@@ -9,3 +9,15 @@
 <p>The bearings have little wear, but if it is necessary to replace them, construct a puller that will apply force to the outer ring of the bearing with the opposing force against the aluminum housing. An AN4 bolt through both parts of the puller should be tightened until the bearing rim is pulled past the stake marks and the bearing comes out of the housing. When the new bearing is installed, re-stake with a center punch. </p>
 
 <p>The rudder horn is p/n 70092-1 and has two p/n 70093-1 bushings installed for wear at the cable attachment. The horn is attached to the rudder assembly with two AN4C7A bolts.  Rudder control stops are at the rudder horn and the rudder travel is 24° Left, +/-1°, or 24°  Right, +/- 1°. </p>
+
+<p>It is recommended that Part #71164-1 cable guard be and remain installed on all aircraft. Aircraft damage due to a loose rudder cable may occur due to the loss of the cable attaching hardware--erosion of the cotter pin from fertilizer blasting may allow a complete loss of the attaching bolt and nut. Air Tractor has developed a stainless steel guard to the rudder cable attach hardware to prevent such an recurrence.</p>
+
+<p>Aircraft serial numbers -0001 through -0081 may have experienced wear at the aft rudder fairlead. To solve this problem and extend the life of the cables Air Tractor has changed the design of the cable. The new cables incorporate a stainless sleeve that is crimped to the cable in this area. The sleeve of the new cable rides in the fairlead and prevents the cable strands from wearing.
+</p>
+
+<p>For more information about installing upgraded parts, refer to Service Letter #190 and Service Letter #199.</p>
+
+<p>Aircraft serial numbers -0001 through -0042 have at least 2 instances of rudder skin cracks in the corner at the rear of the horn overhang just above the top hinge. If ignored, these cracks will progress up the vertical row of rivets near that location.
+</p>
+
+<p>Air Tractor suggests that you immediately inspect your rudder for skin cracks in this area. Starting with serial number -0043, an additional gusset has been installed at that location to reinforce the corner. If no skin cracks are found, it is suggested that the operator install those gussets externally as detailed under "Rework Instructions" in Service Letter #175A.</p>
