--- a/html/Maintenance/Aileron - Rudder Interconnect System Rigging.html
+++ b/html/Maintenance/Aileron - Rudder Interconnect System Rigging.html
@@ -68,4 +68,6 @@
         left-hand aileron to rise. </li>
 </ol>
 
+<p>If you operate an aircraft in the serial number -0001 through -0020 range, there has been a previous incident where one balance cable in the aileron control system became loose. The cable rode over the rim of a pulley and caused a drag force in the control stick. The aircraft remained controllable and was returned to the landing strip without further incident. A change in the design was made to prevent this from happening on serial number -0021 and subsequent.</p>
 
+<p>The aileron rudder interconnect system has been changed to incorporate a spring in each cable where it attaches to the control stick torque horn. This spring helps keep the interconnect cable tight. Consult Service Letter #150 if you need to update your aircraft with this improvement.</p>
