--- a/html/Maintenance/Canopy Doors.html
+++ b/html/Maintenance/Canopy Doors.html
@@ -17,6 +17,8 @@
 
 <p>There has also been at least one instance where the door release spring has worn through its attach hole in the 11875-1 bracket. The material for the bracket has been changed from 2024-T3 aluminum to 4130N steel in late 2013 to increase its strength and durability. The bracket has also been lengthened to provide additional edge distance around the spring attach hole. Refer to Service Letter #316 for directions to install this improvement.</p>
 
+<p>Owners of serial numbers -0001 through -0037 should be aware of a new cockpit door hinge assemblies that will improve the operation of the cockpit door emergency release cable. These new assemblies are more fully described in Service Letter #153.</p>
+
 <p>The right-hand canopy door may be removed by following these steps: </p>
 
 <ol type="1">
