--- a/html/Maintenance/Fuel System Screens and Filters.html
+++ b/html/Maintenance/Fuel System Screens and Filters.html
@@ -21,7 +21,7 @@
 
 <p>It is possible for the fuel filter canister to allow tiny air bubbles to enter the engine fuel control unit (FCU) if not properly sealed. Air bubbles entering the FCU could cause the engine to lose power or flame out completely.</p>
 
-<p>rubber, of the fuel filter canister should be replaced each time the canister is opened.</p>
+<p>To prevent this the sealing washers, both copper and rubber, of the fuel filter canister should be replaced each time the canister is opened.</p>
 
 <p>The seal of the fuel filter canister can be checked by pressuring it up with the fuel boost pump.</p>
 
