--- a/html/Maintenance/Oil Requirements.html
+++ b/html/Maintenance/Oil Requirements.html
@@ -27,3 +27,16 @@
 <p>Occasionally there is a customer that has problems with elevated oil temperatures. To assist in determining what the cause of the problem is, Air Tractor has developed a thermostat test plug which most of the dealers have. This plug can be installed, in place of the thermostat, to determine whether or not the thermostat and oil cooler thermostat seat are good. </p>
 
 <p>To test the thermostat and seat, follow the procedure described in Service Letter #189.</p>
+
+<p>To solve the oil cooling problem for operators in very hot areas Air Tractor has introduced a heavy duty oil cooler installation. The system is similar
+to the oil cooler currently installed on your aircraft. The new system, however, uses a larger oil cooler with more surface area and greater heat rejection capability. To see if this option would be appropriate for your aircraft, consult Service Letter #143.</p>
+
+<p>All engines produce small amounts of metal in the oil. However, excessive amounts of metal in the oil, as in the case of internal component failure, usually results in engine tear down and repair or overhaul. Before returning the engine to service every effort should be made to ensure that all particles of metal have been removed from the oil system.</p>
+
+<p>The oil system should be completely drained and flushed. Removal and pressure flushing of all oil lines should be the minimum maintenance provided for these components.
+</p>
+
+<p>Since there is no way to be sure that flushing will remove all metal contaminants, the airframe oil cooler should be replaced on all airplanes with turbine engines. 
+</p>
+
+<p>Proper cleaning or replacement of oil system components can greatly reduce the possibility of metal particles causing damage to your new or repaired engine.</p>
