--- a/html/Maintenance/Suggested Time Limits.html
+++ b/html/Maintenance/Suggested Time Limits.html
@@ -62,6 +62,12 @@
         <td class="plainTableNormalCell">800 hours</td>
         <td class="plainTableNormalCell">SL 170</td>
     </tr>
+    <tr>
+        <td class="plainTableNormalCell">500702-403 or -407</td>
+        <td class="plainTableNormalCell">Shoulder Harness</td>
+        <td class="plainTableNormalCell">5 Years</td>
+        <td class="plainTableNormalCell">SL152 (if not equipped with AmSafe System)</td>
+    </tr>
 </table>
 
 <p>Recommended replacement intervals are provided for the following components but Air Tractor suggests they be replaced at more frequent intervals if the airplane is operated in a more severe manner such as for rice operations. </p>
