--- a/html/Maintenance/Tail Wheel Lock Pin and Housing.html
+++ b/html/Maintenance/Tail Wheel Lock Pin and Housing.html
@@ -221,11 +221,6 @@
     <li>When adjustment is complete, thread in jam nuts until they make contact with the housing. Torque both to a
         minimum of 120 in-lb</li>
 
-    <li>Safety wire the adjustment bolts.
-        <figure>
-            <img class="imageCentered_4x3" src="img/img_SureLockTailWheelLockSafetyWire.png">
-            <figcaption class="centerText">Sure Lock Safety Wire</figcaption>
-        </figure>
         <div class="boxCautionMedium">
             <p class="boxCautionMediumHeader">Caution</p>
             <p class="boxCautionMediumText">
@@ -233,6 +228,13 @@
                 adjustment setting.
             </p>
         </div>
+
+    <li>Assure the tail wheel lock pin drops freely into place. If it does not, manually move the pin up and down until it moves freely using only the force of the spring. </li>
+        <figure>
+            <img class="imageCentered_4x3" src="img/img_SureLockTailWheelLockSafetyWire.png">
+            <figcaption class="centerText">Sure Lock Safety Wire</figcaption>
+        </figure>
+    
     </li>
 </ol>
 
@@ -250,8 +252,7 @@
 
 <p><b>Inspection - Sure Lock Tail Wheel Lock Mechanism</b></p>
 <p>
-    Remove the tail wheel locking mechanism by removing the 4 bolts on the top of the housing, check pin for
-    straightness and wear. Lubricate, reinstall. Check alignment and adjustment.
+    Remove the tail wheel locking mechanism by removing the 4 bolts on the top of the housing, check pin for straightness and wear. Lubricate, reinstall and check alignment per “Tail Wheel Tracking Adjustment” in the Maintenance section of this Supplement.
 </p>
 
 <p>For serial numbers -0089 thru -0118 plus those retrofitted with stainless steel tailwheel unlock rods -- there has been a report of the tail wheel unlock rod binding in the fairleads. Inspect the fairleads and insure that the hole through the fairleads is .323" (Letter "P" Drill). Any fairleads with a hole smaller than .323" should be replaced with a 70122-2 fairlead per Service Letter #222.</p>
