--- a/html/Inspection/Insp_AIR CONDITIONING SYSTEM.html
+++ b/html/Inspection/Insp_AIR CONDITIONING SYSTEM.html
@@ -24,4 +24,14 @@
     <td class="cellInspectionInterval">(100)</td>
     <td class="cellInspectionText">Inspect the rear air conditioner duct to ensure that it is properly installed, secured and cannot rotate in such a way to obstruct rudder travel (2-seat aircraft only).</td>
   </tr>
+  <tr>
+    <td class="cellInspectionNumber">AC6</td>
+    <td class="cellInspectionInterval">(100)</td>
+    <td class="cellInspectionText">Check oil level in air conditioner compressor drive pad. (S/N -0001 through -0035 if equipped with 51628-1 Compressor Drive installed).</td>
+  </tr>
+  <tr>
+    <td class="cellInspectionNumber">AC7</td>
+    <td class="cellInspectionInterval">(12 Months)</td>
+    <td class="cellInspectionText">Change oil in air conditioner compressor drive pad. (S/N -0001 through -0035 if equipped with 51628-1 Compressor Drive installed).</td>
+  </tr>
 </table>
