--- a/html/Maintenance/Gate Box Controls.html
+++ b/html/Maintenance/Gate Box Controls.html
@@ -6,3 +6,8 @@
 </figure>
 
 <p>The boot attached to the lower fuselage skin is p/n 80133-1 with a p/n 70140-1 boot ring and 90013-4 screws, MS21044C08 nuts. A p/n 80672-8 push-rod connects the lower torque tube to the hopper handle in the cockpit. This push-rod has an adjustable Fafnir RE4M6 bearing on the lower end, and a Fafnir RE4H6 bearing in the other end. The hopper handle (p/n 80866-1) is supported on each end with Fafnir PB 1/2 bearings. Bolts through the bearings are AN6-17A. </p>
+
+<p>On serial numbers -0007 through -0020 there was a fault found in the design of the calibrator is of not being able to know the position of the gate stop before fertilizing or seeding operations began. 
+</p>
+
+<p>This problem has been addressed and corrected. There is now a gate stop position indicator that can easily be retrofitted in the field to all above listed aircraft that were produced with the new style calibrator. See additional information in Service Letter #137A.</p>
