--- a/html/Maintenance/Horizontal Stabilizer Struts.html
+++ b/html/Maintenance/Horizontal Stabilizer Struts.html
@@ -1,10 +1,7 @@
 <p>
     The stabilizer struts attach to the fuselage frame with an AN6C13A bolt and to the stabilizer eyebolts with AN6-11A
     bolts.
-    There are two p/n 30256-1 stainless eyebolts that attach to
-    a welded steel brace inside the stabilizer for strut attachment. Each eyebolt is secured with AN316C8 check nuts.
-    Eyebolt replacement should be in accordance with SL
-    129 and <xref sectionTarget="2.200.1" prependLabel="Section"></xref>.
+    There are two eyebolts that attach to a welded steel brace inside the stabilizer for strut attachment. Eyebolt hardware replacement should be in accordance with SL 129, SL129A, SL129B and  <xref sectionTarget="2.200.1" prependLabel="Section"></xref>.
 </p>
 
 <p>
