--- a/html/Maintenance/Main Gear Spring.html
+++ b/html/Maintenance/Main Gear Spring.html
@@ -26,6 +26,14 @@
 
 <p>As in the case of the tail gear spring, the main gear spring will fatigue and break at some point in the life of the aircraft. Again, the number of hours before failure will vary considerably as some operators make more landings per hour than others, or carry heavier loads, or operate form very rough strips. Pilot technique is again a factor, as some pilots are very rough on airplanes. See the Airworthiness Limitations section for the fatigue life of the main gear springs. </p>
 
+<p>The service life of the 1.56-inch
+    thick main gear legs has been lowered to 2,500 landings or 1,000 hours, whichever comes first for operators with rough-strips, and 1,000 landings or 1,200 hours, whichever comes first, for operators working from smooth sod or paved landing sites.
+    </p>
+
+    <p>The 1.56-inch thick landing gears were heat treated to a higher ultimate tensile stress in order to qualify them for a 16,000 pound landing weight. Apparently this higher than normal heat treat has made them more brittle and less forgiving of surface imperfections such as rust than gears used on other Air Tractor models.</p>
+
 <p>When the main gear springs are changed, use new bolts and nuts at all locations. The axle attach bolts are NAS148-70, -72, or sometimes -74. Install the springs to the fuselage in accordance with the instructions in this section, and install the axles to the spring using the procedure to check camber and toe-in outlined in Section <xref sectionTarget="2.90.3" labelPrepend="Section"></xref>.</p> Be sure to make log book entries when bolts or gear springs are changed. </p>
 
 <p>When ordering new main gear springs or clamp blocks also order 4 ea. 3088A325 and 4 ea. 3088A326 shims in case they are needed. In addition, the large aluminum tapered shims at the axle attachment might need an addition or change so it would be a good idea to order 2 ea. 4040141-3 shims and 2 ea 40114-2 shims in case they are needed. Whenever the airplane is ground-looped or involved in an incident that puts a permanent bend in one gear spring, the other spring must be changed as it may have been overstressed. </p>
+
+<p>A very detailed description of the removal, installation and alignment of the main gear struts and wheels may be found in Service Letter #151.</p>
