--- a/html/Maintenance/Seat.html
+++ b/html/Maintenance/Seat.html
@@ -5,3 +5,8 @@
 <p>It is recommended that the technician occasionally inspect both ends of the lower cross tube at the inboard side of the welded connection to the seat frame. Look for any wrinkling or other deformation near the welded connection.</p>
 
 <p>The seat covers wear and need changing from time to time. The back cover is p/n 10541-1 and the bottom cover is p/n 10540-1. If the crotch strap is installed through the bottom seat cover (used with AmSafe Airbag System) use bottom cover p/n 10540-3.  Tools are available from the factory to make seat cover replacement easier. </p>
+
+<p>We have observed the fact that various pieces of optional equipment have been mounted under the seat of Air Tractors after the aircraft has left the factory. Equipment mounted under any seat in any Air Tractor model could compromise the crashworthiness of the seat design. We urge you to relocate any equipment mounted under the seat of your aircraft, except possibly, soft and easily deformed items, such as plastic windshield wash jugs. 
+</p>
+
+<p>The Air Tractor seat frame and installation is designed to deform and absorb energy in the unfortunate instance of a crash. The seat bottom is cantilevered out from the seat back and will deform down due to the dynamic load applied during  impact. If equipment that is sufficiently stiff is installed under a seat, it may impede the deformation of the seat frame and increase the force delivered to the occupant's body during a crash. We strongly urge you to keep this fact in mind when choosing a location for various items of equipment. Alternate locations may be under the floor structure or in the aft section of the fuselage behind the cockpit. Always install equipment in accordance with the manufacturer's approved data.</p>
