--- a/html/Repairs/Fuselage Frame Aft Section.html
+++ b/html/Repairs/Fuselage Frame Aft Section.html
@@ -2,3 +2,16 @@
 </p>
 
 <p>For more information regarding inspections and repairs, refer to Service Letter #195, Service Letter #217A and Service Letter #217B.</p>
+
+<p>If your aircraft is part of the -0001 through -0037 serial number range, there have been two repairs on two AT-802A's in the aft fuselage structure. Both failures were in the bay just forward of the vertical fin front spar attach, which is also where the horizontal stabilizer attaches.
+</p>
+
+<p>The first failure was in the diagonal member p/n 11001-111 between the upper longerons. This member extends from the L/H side at the vertical fin front spar attach fitting diagonally forward to the R/H upper longeron. The failure was a clean break of the tube at the weld at the forward end.</p>
+
+<p>The second failure was in the side diagonal p/n 11001-9l that extends upward and forward from the tail gear spring forward attach location. The failure was compressive buckling of the tube.
+</p>
+
+<p>In both instances the operator of the aircraft reported violent tail wheel shimmy before the failure was discovered. A tail wheel that shimmies can produce high side loads in the fuselage structure especially if the shimmy couples with the natural frequency in torsion of the aft fuselage structure.
+</p>
+
+<p>If your aircraft has encountered violent shimmy it is recommended that an immediate inspection be made of the aft fuselage structure in the bay previously described.</p>
